# owlExaStitcher

./: .gitignore  .gitmodules  ABRs.cpp  ABRs.h  AMRCellModel.cpp  AMRCellModel.h  CMakeLists.txt  DDA.h  ExaBrickModel.cpp  ExaBrickModel.cu  ExaBrickModel.h  ExaStitchModel.cpp  ExaStitchModel.h  Grid.cu  Grid.cuh  Grid.h  Gridlet.h  IniFile.cpp  IniFile.h  KDTree.cpp  KDTree.cuh  KDTree.h  KDTreeTest.cu  LaunchParams.h  LightInteractor.cpp  LightInteractor.h  Model.cpp  Model.h  OWLRenderer.cpp  OWLRenderer.h  Plane.h  README.md  SAHVolumeWrapper.h  TriangleMesh.cpp  TriangleMesh.h  UElems.h  Witcher.cpp  Witcher.h  YueKDTree.h  YueVolume.h  (+12 more)
anari/: CMakeLists.txt  Camera.cpp  Camera.h  Device.cpp  Device.h  DeviceDebugFactory.cpp  DeviceQueries.cpp  ExaStitchGlobalState.h  Frame.cpp  Frame.h  Light.cpp  Light.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  SpatialField.cpp  SpatialField.h  Volume.cpp  Volume.h  example.md  exastitch_device.json  export.h  math.h
anari/array/: Array.cpp  Array.h  Array1D.cpp  Array1D.h  Array2D.cpp  Array2D.h  Array3D.cpp  Array3D.h  ObjectArray.cpp  ObjectArray.h
model/: ABRs.cpp  ABRs.h  AMRCellModel.cpp  AMRCellModel.h  BigMeshModel.cpp  BigMeshModel.h  ExaBrickModel.cpp  ExaBrickModel.h  ExaStitchModel.cpp  ExaStitchModel.h  Gridlet.h  Model.cpp  Model.h  QuickClustersModel.h
sampler/: AMRCellSampler.cpp  AMRCellSampler.h  BigMeshSampler.cpp  BigMeshSampler.h  ExaBrickSampler.cpp  ExaBrickSampler.cu  ExaBrickSampler.h  ExaBrickSamplerCPU.cpp  ExaBrickSamplerCPU.h  ExaStitchSampler.cpp  ExaStitchSampler.cu  ExaStitchSampler.h  QuickClustersSampler.cpp  QuickClustersSampler.cu  QuickClustersSampler.h  Sampler.cpp  Sampler.h  YueKDTree.h  YueVolume.h
sampler/programs/: AMRCellSampler.cu  ExaBrickSampler.cu  ExaStitchSampler.cu  QuickClustersSampler.cu
scripts/: .gitignore  cloud-stitcher-paper.sh  cloud-stitcher-paper.xf  cloud.bat  cloud.sh  cloud.xf  exajet-rear.bat  exajet-rear.sh  exajet-rear.xf  exajet-stitcher-paper.sh  exajet-teaser.bat  exajet-teaser.sh  exajet-teaser.xf  exajet-wing.bat  exajet-wing.sh  gear-stitcher-paper.sh  gear-stitcher-paper.xf  gear.bat  gear.sh  meteor-20k.bat  meteor-20k.sh  meteor-20k.xf  meteor-46k-stitcher-paper.sh  meteor-46k-stitcher-paper.xf  meteor-46k.bat  meteor-46k.sh  meteor-5k.sh  meteor-5k.xf
tools/: computeVectorMagnitude.cpp  kdtreeBuilder.cpp  makeTestData.cpp
tools/amrMakeDualMesh/: CMakeLists.txt  README.md  makeDual.cpp  makeGrids.cpp
va/: ImGuiCUDAGLWidget.cpp  ImGuiCUDAGLWidget.h  TFEditor.cpp  TFEditor.h  VolumeLines.cu  VolumeLines.h  viewer.cpp
